@@ -1,4 +1,5 @@
 {{$NEXT}}
+    Use HTTP::Online to check for online access when running tests/
 
 1.122600  2012-09-16 09:37:33 Europe/London
     Fix populating the availabilities membership data.
